Use List#get(0) instead of getFirst() to support older compilers
Signed-off-by: James Duong <james.duong@improving.com>